Terminacion del contenido central

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -20,7 +20,7 @@
           <img src="imagen/instagram.jpg" class="iconos">
           <img src="imagen/youtube.png" class="iconos">
           <img src="imagen/twitter.png" class="iconos">
-          <img src="imagen/pinterest.png" class="img-fluid iconos">
+          <img src="imagen/pinterest.png" class="iconos">
         </div>
       </div>
       <div class="row">
@@ -47,8 +47,83 @@
       </div>
     </header>
     <section class="container fondo-contenido">
-      hola
-    </section>
-
+      <div class="row">
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-7">
+              <h1>Maná</h1>
+              <p class="text-justify">Maná es una banda de rock latino y pop latino mexicana. Se formó en Guadalajara, en 1987. Está conformada por Fher Olvera (guitarra rítmica, armónica y voz), Juan Calleros, (bajo y contrabajo) Alex González (batería y voz) y Sergio Vallín (guitarra líder y voz). Ha vendido más de 40 millones de discos en todo el mundo, convirtiéndolos en la banda latina más exitosa de todos los tiempos.</p>
+            </div>
+            <div class="col-md-5 text-center">
+              <img src="imagen/mana.jpg" class="imagen-contenido">
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col-2 text-center">
+                  <img src="imagen/usuario.png" class="imagen-usuario">
+                </div>
+                <div class="col-9 text-center">
+                  <form>
+                    <div class="form-group">
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Comentario"></textarea>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-7 order-2">
+              <h1>Labios compartidos</h1>
+              <p class="text-justify">Labios compartidos es el primer sencillo del séptimo álbum de estudio del grupo de rock latino Maná, titulado Amar es combatir (2006). La letra y música corresponden a Fher Olvera. Esta canción tuvo éxito en varios países, logrando posicionarse en el primer lugar en la lista musical Hot Latin Tracks de la revista especializada Billboard durante ocho semanas consecutivas, siendo una de las canciones más sonadas en Latinoamérica. En la lista Hot 100 de la misma publicación logró el lugar número 82 y en Hot Ringtones la número 12. Se lanzó un remix de «Labios compartidos» con el dúo de música urbana Calle 13. En Chile, llegó al número uno en 11 semanas, y tiene el récord de permanencia en el 1° lugar, incluso fue un éxito en aquel país hasta el año 2009.</p>
+            </div>
+            <div class="col-md-5 text-center col-0rder-1">
+              <img src="imagen/labios.jpg" class="imagen-contenido">
+            </div>
+            <div class="col order-3">
+              <div class="row">
+                <div class="col-2 text-center">
+                  <img src="imagen/usuario.png" class="imagen-usuario">
+                </div>
+                <div class="col-9 text-center">
+                  <form>
+                    <div class="form-group">
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Comentario"></textarea>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 d-none d-md-block">
+          <div class="input-group mb-3 col-12">
+            <div class="input-group-prepend">
+              <span class="input-group-text">
+                <img src="imagen/lupa.png" class="buscador">
+              </span>
+            </div>
+            <input type="text" class="form-control" placeholder="Buscar por" aria-label="Username" aria-describedby="basic-addon1">
+          </div>
+          <div class="col-12">
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-action">Canciones</a>
+              <a href="#" class="list-group-item list-group-item-action">Album</a>
+              <a href="#" class="list-group-item list-group-item-action">Compositor</a>
+              <a href="#" class="list-group-item list-group-item-action">Más buscado</a>
+              <a href="#" class="list-group-item list-group-item-action">Mayor Exito</a>
+              <a href="#" class="list-group-item list-group-item-action">Polular</a>
+              <a href="#" class="list-group-item list-group-item-action">Genero</a>
+              <a href="#" class="list-group-item list-group-item-action">Videos</a>
+              <a href="#" class="list-group-item list-group-item-action">Giras</a>
+              <a href="#" class="list-group-item list-group-item-action">Proximos Concieros</a>
+              <a href="#" class="list-group-item list-group-item-action">Fechas Nacionales</a>
+              <a href="#" class="list-group-item list-group-item-action">Firma de autografos</a>
+              <a href="#" class="list-group-item list-group-item-action">Compra de Boletos</a>
+              <a href="#" class="list-group-item list-group-item-action">Letra de canciones</a>
+            </div>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
