Editando Los detalles y colores para terminar con Bootstrap

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,11 +16,11 @@
           <img src="imagen/logo.jpg" class=" logo">
         </div>
         <div class="col-md-4 offset-md-5 align-self-end text-center">
-          <img src="imagen/facebook.jpg" class="iconos">
-          <img src="imagen/instagram.jpg" class="iconos">
-          <img src="imagen/youtube.png" class="iconos">
-          <img src="imagen/twitter.png" class="iconos">
-          <img src="imagen/pinterest.png" class="iconos">
+          <a href="#"><img src="imagen/facebook.jpg" class="iconos"></a>
+          <a href="#"><img src="imagen/instagram.jpg" class="iconos"></a>
+          <a href="#"><img src="imagen/youtube.png" class="iconos"></a>
+          <a href="#"><img src="imagen/twitter.png" class="iconos"></a>
+          <a href="#"><img src="imagen/pinterest.png" class="iconos"></a>
         </div>
       </div>
       <div class="row">
