Terminando pagina de Foundation

--- a/Foundation/index.html
+++ b/Foundation/index.html
@@ -19,9 +19,9 @@
       </div>
     </header>
     <section class="row color-header">
-      <div class="columns medium-4 callout primary show-for-medium">
+      <div class="columns medium-4 callout show-for-medium menu">
         <form>
-          <div class="input-group buscador columns">
+          <div class="input-group buscador columns small-12">
             <input class="input-group-field" type="text">
             <span class="input-group-label"><i class="fi-magnifying-glass"></i></span>
           </div>
@@ -68,7 +68,90 @@
         </div>
       </div>
       <div class="columns medium-8">
-        holalalsll
+        <div class="columns callout">
+          <h1>Mole</h1>
+          <p class="subtitulo">23 de Octubre 2018</p>
+          <img src="imagen/mole.jpg" class="imagen-favoritos  thumbnail">
+          <p>El mole es uno de los platillos más representativos de México, es un guiso que podemos comer a diario y en ocasiones especiales. Su término proviene del náhuatl molli o mulli, y se refiere a varios tipos de salsas preparadas a partir de chiles y especias.</p>
+          <p>Se elabora desde época prehispánica a través de mezclas de salsas muy condimentadas, pero al paso de los siglos, las cocineras lo fueron transformando, refinando y adaptando sus recetas con nuevos ingredientes y técnicas.</p>
+          <p>Existen más de 300 recetas de moles en el país, pues cada preparación varia en ingredientes y tiene la personalidad de su región.</p>
+          <p>Seleccionamos nuestras mejores 10 recetas de moles mexicanos para que las disfrutes en casa:</p>
+          <hr>
+          <form>
+            <label>
+              Escribe un comentario
+              <textarea></textarea>
+              <div class="columns text-right">
+                <a class="button" href="#">Publicar</a>
+              </div>
+            </label>
+          </form>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar1.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Guadalupe:</strong>Buena Informacion sobre el mole</p>
+            </div>
+          </div>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar2.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Carlos:</strong>A mi me encanta la comida mexicana y en especial el peculiar sabor y sazon de un buen mole al estilo poblano.</p>
+            </div>
+          </div>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar3.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Alejandra:</strong>Me encata el mole por que me recuerda el sabor a hogar, la comida de mi abuelita.</p>
+            </div>
+          </div>
+        </div>
+        <div class="columns callout">
+          <h1>Pozole</h1>
+          <p class="subtitulo">23 de Octubre 2018</p>
+          <img src="imagen/pozole.jpg" class="imagen-favoritos  thumbnail">
+          <p>El pozole (del náhuatl pozolli, de tlapozonalli, hervido o espumoso,o del cahíta posoli, cocer maíz) es un plato de México y Centroamérica, es una especie de caldo hecho a base de granos de maíz de un tipo conocido comúnmente como cacahuazintle, a la que se agrega, según la región, carne de pollo o de cerdo como ingrediente secundario.1​ De esta preparación básica existen variaciones por todo el territorio mexicano. Por ejemplo, el pozole blanco de Guerrero y el rojo de Sonora, Sinaloa, Nayarit, Guanajuato y Jalisco.2​ A este platillo se le puede acompañar con tostadas de crema, pata y otras especialidades de la cocina mexicana.</p>
+          <hr>
+          <form>
+            <label>
+              Escribe un comentario
+              <textarea></textarea>
+              <div class="columns text-right">
+                <a class="button" href="#">Publicar</a>
+              </div>
+            </label>
+          </form>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar1.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Claudia:</strong>El pozole es el alimento preferido de los Dioses. Bendita son las manos que lo preparan.</p>
+            </div>
+          </div>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar2.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Mauricio:</strong>No me gusta el pozole, que chiste maiz en grano con carne.</p>
+            </div>
+          </div>
+          <div class="row callout">
+            <div class="columns small-2 avatar">
+              <img src="imagen/avatar3.png">
+            </div>
+            <div class="columns small-10">
+              <p><strong>Casandra:</strong>A mi me encanta los jueves de pozol en Potzollcali</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
