realizacion del header de la pagina con materialize.

--- a/Materialize/index.html
+++ b/Materialize/index.html
@@ -10,21 +10,31 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <header class="row blue lighten-1">
-      <div class="col offset-s1 s3">
-        <img src="imagen/logo.jpg" class=" logo responsive-img z-depth-5">
-      </div>
-      <div class="col s8">
-        <div class="col offset-s2 s10 flow-text">
-          Holala
+    <header class="row">
+      <nav class="row  blue lighten-1">
+        <div class="col s3">
+          <img src="imagen/logo.jpg" class=" logo responsive-img z-depth-5">
         </div>
-        <div class="col s12">
-          <h1>Conociendo el mundo</h1>
+        <div class="col s9 right">
+          <div class="col s12 flow-text">
+            <ul class="right">
+            <li><a class="waves-effect waves-light btn"><i class="material-icons left">home</i><label class="par white-text hide-on-med-and-down">Inicio</label></a></li>
+            <li><a class="waves-effect waves-light btn"><i class="material-icons left">camera_alt</i><label class="par white-text hide-on-med-and-down">Fotos</label></a></li>
+            <li><a class="waves-effect waves-light btn"><i class="material-icons left">grade</i><label class="par white-text hide-on-med-and-down">Favoritos</label></a></li>
+            <li><a class="waves-effect waves-light btn"><i class="material-icons left">landscape</i><label class="par white-text hide-on-med-and-down">Paisajes</label></a></li>
+            </ul>
+          </div>
+
         </div>
-      </div>
+        <div class="col s9">
+          <h4 class="black-text">Conociendo el mundo</h1>
+        </div>
+      </nav>
     </header>
 
   </body>
