Desarrolle el contenido de la pagina de materialize.

--- a/Materialize/index.html
+++ b/Materialize/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="row">
-      <nav class="row  blue lighten-1">
+      <nav class="row transparent">
         <div class="col s3">
           <img src="imagen/logo.jpg" class=" logo responsive-img z-depth-5">
         </div>
@@ -32,10 +32,44 @@
 
         </div>
         <div class="col s9">
-          <h4 class="black-text">Conociendo el mundo</h1>
+          <h4 class="black-text">Viajando por el mundo</h1>
         </div>
       </nav>
     </header>
+    <section class="row">
+      <div class="col l1">
+        <div class="col hide-on-med-and-down">
+          <img src="imagen/facebook.png" class="responsive-img">
+          <img src="imagen/instagram.png" class="responsive-img">
+          <img src="imagen/twiter.png" class="responsive-img">
+          <img src="imagen/whatsapp.png" class="responsive-img">
+          <img src="imagen/youtube.png" class="responsive-img">
+        </div>
+      </div>
+      <div class="col m12 l3">
+        <img src="imagen/paisaje1.jpg" class="responsive-img">
+        <img src="imagen/paisaje2.jpg" class="responsive-img">
+      </div>
+      <div class="col m12 l4">
+        <img src="imagen/paisaje3.jpg" class="responsive-img">
+      </div>
+      <div class="col m12 l3">
+        <img src="imagen/paisaje4.jpg" class="responsive-img">
+        <img src="imagen/paisaje5.jpg" class="responsive-img">
+      </div>
+    </section>
+    <section class="row">
+      <div class="col m9">
+        <div class="col s12 card">
 
+        </div>
+        <div class="col s12 card">
+
+        </div>
+      </div>
+      <div class="col m3">
+
+      </div>
+    </section>
   </body>
 </html>
