Terminando la Pagina de Materialize

--- a/Materialize/index.html
+++ b/Materialize/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-    <title>Conociendo el mundo</title>
+    <title>Viajando por el mundo</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <header class="row">
-      <nav class="row transparent">
+    <div class="container-fluid blue cabecera">
+
+    </div>
+    <header class="row card transparent eliminar-borde">
+      <nav class="row transparent eliminar-borde">
         <div class="col s3">
           <img src="imagen/logo.jpg" class=" logo responsive-img z-depth-5">
         </div>
@@ -32,18 +35,19 @@
 
         </div>
         <div class="col s9">
-          <h4 class="black-text">Viajando por el mundo</h1>
+          <h4 class="white-text">Viajando por el mundo</h1>
         </div>
       </nav>
     </header>
-    <section class="row">
+
+    <section class="row card transparent eliminar-borde">
       <div class="col l1">
         <div class="col hide-on-med-and-down">
-          <img src="imagen/facebook.png" class="responsive-img">
-          <img src="imagen/instagram.png" class="responsive-img">
-          <img src="imagen/twiter.png" class="responsive-img">
-          <img src="imagen/whatsapp.png" class="responsive-img">
-          <img src="imagen/youtube.png" class="responsive-img">
+          <a href="#"><img src="imagen/facebook.png" class="responsive-img"></a>
+          <a href="#"><img src="imagen/instagram.png" class="responsive-img"></a>
+          <a href="#"><img src="imagen/twiter.png" class="responsive-img"></a>
+          <a href="#"><img src="imagen/whatsapp.png" class="responsive-img"></a>
+          <a href="#"><img src="imagen/youtube.png" class="responsive-img"></a>
         </div>
       </div>
       <div class="col m12 l3">
@@ -56,20 +60,87 @@
       <div class="col m12 l3">
         <img src="imagen/paisaje4.jpg" class="responsive-img">
         <img src="imagen/paisaje5.jpg" class="responsive-img">
+        <img src="imagen/paisaje6.jpg" class="responsive-img">
       </div>
     </section>
     <section class="row">
-      <div class="col m9">
-        <div class="col s12 card">
-
+      <div class="col m12 l9">
+        <div class="col s12 card blue lighten-4">
+          <div class="col m12 l5">
+            <img src="imagen/cascada-agua-azul.jpg" class="responsive-img img-comentarios">
+          </div>
+          <h1>Cascada de Agua Azul</h1>
+          <div class="chip">
+            15 De Agosto del 2018
+            <i class="material-icons">date_range</i>
+          </div>
+          <div class="chip">
+            Palenque, Chiapas
+            <i class="material-icons">location_on</i>
+          </div>
+          <div class="">
+            <p class="flow-text">El azul añil del agua, el verde de la vegetación, la brisa constante y el sonido acuático inagotable contribuyen a hacer de este lugar, situado a 133 km de San Cristóbal de las Casas, uno de los más espectaculares e inolvidables de México. </p>
+            <p class="flow-text">El río Agua Azul desciende su lecho calizo en escalones formando una serie de impresionantes cascadas que crean albercas naturales contenidas por diques calcáreos, los llamados “gours” en la terminología geológica. La carretera conduce al sitio donde se ubican los modestos servicios con que cuenta.</p>
+            <p class="flow-text">Los intrépidos pueden alcanzar, con la ayuda de guías locales, otras cascadas todavía más espectaculares, pues la escalera continúa aguas abajo hasta que el río se precipita al Tulijá, formando una de las más bellas cortinas de agua. Su color se debe al lecho calizo, sólo perceptible en épocas de seca; en la de lluvia la espectacularidad no disminuye pues es cuando aumenta el volumen hídrico.</p>
+          </div>
         </div>
-        <div class="col s12 card">
-
+        <div class="col s12 card blue lighten-4">
+          <div class="col m12 l5">
+            <img src="imagen/cuatro-cienegas.jpg" class="responsive-img img-comentarios">
+          </div>
+          <h1>Cuatro Ciénegas</h1>
+          <div class="chip">
+            27 De Agosto del 2018
+            <i class="material-icons">date_range</i>
+          </div>
+          <div class="chip">
+            Cuatro Ciénegas, Coahuila
+            <i class="material-icons">location_on</i>
+          </div>
+          <div class="">
+            <p class="flow-text">Cuatro Ciénegas, Coahuila, está ubicado dentro de los márgenes del desierto chihuahuense, donde se han documentado los esfuerzos de un grupo de investigadores encabezados por la bióloga de la UNAM, Valeria Souza y su esposo, el científico Luis Eguiarte, a quienes el destino los trajo aquí desde hace 15 años. Desde entonces, han dedicado su vida a la investigación de este ecosistema paradigmático. Ellos llegaron a Cuatro Ciénegas invitados por un proyecto de la NASA dirigido al estudio de bacterias. </p>
+            <p class="flow-text">En las pozas de este desierto, descubrieron criaturas púrpuras ancestrales que datan del periodo arqueano, que data de hace unos tres mil 800 millones de años, antes de que surgiera la fotosíntesis verde que libera el oxígeno. Ambos investigadores se dieron cuenta que en ese lugar habitaban las criaturas que cambiaron el mundo para siempre. Bajo ese descubrimiento, Valeria Souza se enamoró, pero pronto descubrió que los ranchos alfareros y su extracción indiscriminada de agua lo habían devastado. Es por ello que la bióloga, desde entonces, se ha dedicado a desentrañar los misterios científicos de Cuatro Ciénegas y también a generar conciencia para su protección.</p>
+            <p class="flow-text">Los habitantes adultos de Cuatro Ciénegas han creído toda su vida que el agua es un recurso inagotable, que en principio están las necesidades humanas y después la preservación del ecosistema. Y ante esto, argumentan ataques directos contra su forma de subsistencia, basada en cultivos que requieren de mucha agua en medio de una zona desértica.</p>
+          </div>
+        </div>
+        <div class="col s12 card blue">
+          <h5 class="white-text">Deja tu comentario</h5>
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s6">
+                  <i class="material-icons prefix white-text">account_circle</i>
+                  <input id="icon_prefix" type="text" class="validate borde">
+                  <label for="icon_prefix" class="white-text">Nombre</label>
+                </div>
+                <div class="input-field col s6">
+                  <i class="material-icons prefix white-text">phone</i>
+                  <input id="icon_telephone" type="tel" class="validate borde">
+                  <label for="icon_telephone" class="white-text">Telefono</label>
+                </div>
+                <div class="input-field col s12">
+                  <i class="material-icons prefix white-text">comment</i>
+                  <textarea id="textarea1" class="materialize-textarea borde"></textarea>
+                  <label for="textarea1" class="white-text">Comentario</label>
+                </div>
+                <div class="col s12">
+                  <button class="btn waves-effect waves-light right" type="submit" name="action">Enviar
+                    <i class="material-icons left">send</i>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-      <div class="col m3">
-
+      <div class="col l3 card blue lighten-4  center-align">
+        <img src="imagen/autor.jpg" class="responsive-img circle">
+        <h5 class="center-align">Perfil del autor</h5>
+        <hr>
+        <p class="flow-text center-align">Mi nombre es Angel David Velasco. Vivo en la ciudad de Tuxtla Gutierrez, Chiapas.
+        Soy ingeniero en electrónica, tranajo en mi empresa MV electrónica. Estoy empezando a programar en web para darle mejor vista a mi pagina. </p>
       </div>
     </section>
+
   </body>
 </html>
